--- a/app/src/main/res/layout/activity_rules_popup.xml
+++ b/app/src/main/res/layout/activity_rules_popup.xml
@@ -3,23 +3,48 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="619dp"
+    android:layout_height="510dp"
     tools:context=".RulesPopup"
     android:background="#faf1b4">
 
-    <Button
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_below="@+id/Rules4"
-        android:layout_marginTop="10dp"
-        android:layout_centerInParent="true"
-        android:id="@+id/Return"
-        android:text="return">
-    </Button>
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="#ffff00"
+        android:id="@+id/TopMargin">
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="10dp"
+        android:layout_height="match_parent"
+        android:background="#ffff00"
+        android:id="@+id/LeftMargin"
+        android:orientation="horizontal">
+    </LinearLayout>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
+        android:background="#ffff00"
+        android:layout_alignParentBottom="true"
+        android:id="@+id/BottomMargin">
+    </RelativeLayout>
+
+    <LinearLayout
+        android:layout_width="10dp"
+        android:layout_height="match_parent"
+        android:background="#ffff00"
+        android:layout_alignParentRight="true"
+        android:id="@+id/RightMargin"
+        android:orientation="horizontal">
+    </LinearLayout>
+
+
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="48dp"
+        android:layout_below="@id/TopMargin"
         android:id="@+id/Rules"
         android:textColor="@color/black"
         android:gravity="center"
@@ -31,6 +56,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_below="@+id/Rules"
+        android:layout_toRightOf="@id/LeftMargin"
+        android:layout_toLeftOf="@id/RightMargin"
         android:layout_height="70dp"
         android:layout_marginTop="10dp"
         android:id="@+id/Rules1"
@@ -46,6 +73,8 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_below="@+id/Rules1"
+        android:layout_toRightOf="@id/LeftMargin"
+        android:layout_toLeftOf="@id/RightMargin"
         android:layout_marginTop="20dp"
         android:gravity="center"
         android:text="ONCE YOU FORM A MILL, YOU CAN REMOVE ONE OF YOUR OPPONENTS MEN. BREAK A MILL TO UNLOCK THE MILLS AGAIN"
@@ -57,6 +86,8 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_below="@+id/Rules2"
+        android:layout_toRightOf="@id/LeftMargin"
+        android:layout_toLeftOf="@id/RightMargin"
         android:layout_height="99dp"
         android:layout_marginTop="20dp"
         android:id="@+id/Rules3"
@@ -72,6 +103,8 @@
         android:layout_width="match_parent"
         android:layout_height="100dp"
         android:layout_below="@+id/Rules3"
+        android:layout_toRightOf="@id/LeftMargin"
+        android:layout_toLeftOf="@id/RightMargin"
         android:layout_marginTop="10dp"
         android:gravity="center"
         android:text="YOUR AIM IS TO LEAVE YOUR OPPONENT WITH EITHER 2 PIECES OR 0 MOVES. GOODLUCK!"
