--- a/app/src/main/res/layout/activity_rules_popup.xml
+++ b/app/src/main/res/layout/activity_rules_popup.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="510dp"
+    android:layout_height="550dp"
     tools:context=".RulesPopup"
     android:background="#faf1b4">
 
@@ -110,6 +110,19 @@
         android:text="YOUR AIM IS TO LEAVE YOUR OPPONENT WITH EITHER 2 PIECES OR 0 MOVES. GOODLUCK!"
         android:textColor="@color/black"
         android:textSize="20sp">
+
+    </TextView>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:layout_below="@id/Rules4"
+        android:layout_toRightOf="@id/LeftMargin"
+        android:textColor="@color/red"
+        android:textSize="14sp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="24dp"
+        android:text="TAP ANYWHERE ON THE POPUP SCREEN TO EXIT">
 
     </TextView>
 
