--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity">
 
     <LinearLayout
-        android:id="@+id/dim_layout"
+        android:id="@+id/dim_layout_main"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#70000000"
@@ -80,7 +80,7 @@
         android:layout_height="90dp"
         android:layout_marginBottom="72dp"
         android:background="@null"
-        android:onClick="rulesPopup"
+        android:onClick="rulesPopupMain"
         android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
