--- a/app/src/main/res/layout/activity_game_page.xml
+++ b/app/src/main/res/layout/activity_game_page.xml
@@ -12,8 +12,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="#70000000"
-        android:visibility="invisible"
-        android:orientation="horizontal" />
+        android:orientation="horizontal"
+        android:visibility="invisible" />
 
     <ImageButton
         android:id="@+id/unmuteButtonGame"
@@ -61,6 +61,7 @@
         android:textSize="26sp" />
 
     <Button
+        android:id="@+id/hintButtonGame"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginLeft="20dp"
@@ -71,6 +72,7 @@
     </Button>
 
     <Button
+        android:id="@+id/rulesButtonGame"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_marginLeft="340dp"
