--- a/app/src/main/res/layout/activity_game_page.xml
+++ b/app/src/main/res/layout/activity_game_page.xml
@@ -52,27 +52,6 @@
         android:textColor="@color/black"
         android:textSize="26sp" />
 
-    <Button
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="150dp"
-        android:background="@drawable/hint"
-        app:backgroundTint="@null">
-
-    </Button>
-
-    <Button
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_marginLeft="340dp"
-        android:layout_marginTop="150dp"
-        android:background="@drawable/help"
-        android:onClick="rulesPopupGame"
-        app:backgroundTint="@null">
-
-    </Button>
-
     <RelativeLayout
         android:id="@+id/whiteCheckerArea"
         style="@style/CheckerArea"
@@ -764,8 +743,8 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="148dp"
-        android:layout_marginEnd="143dp"
+        android:layout_marginStart="155dp"
+        android:layout_marginEnd="136dp"
         android:layout_marginBottom="28dp"
         android:background="@null"
         android:onClick="reset"
@@ -788,7 +767,33 @@
         android:onClick="reset"
         android:scaleType="fitCenter"
         app:srcCompat="@drawable/changepiecesbutton" />
+
+    <ImageButton
+        android:id="@+id/imageButton8"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="172dp"
+        android:layout_marginEnd="25dp"
+        android:background="@null"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/lightbulbbutton" />
+
+    <ImageButton
+        android:id="@+id/imageButton9"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="316dp"
+        android:layout_marginBottom="497dp"
+        android:background="@null"
+        android:scaleType="fitCenter"
+        app:srcCompat="@drawable/questionmarkbutton" /><![CDATA[
+
     />
 
 
+]]>
 </RelativeLayout>
